--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "2a072c38-a382-4269-81e9-7963fd84c041"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
